# NexusLIMS-Logger

./: .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  admin_doc.html  authors.html  changelog.html  genindex.html  index.html  license.html  logger_gui.html  note_db  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: gh-pages.yml
_modules/: index.html
_modules/nexuslims_logger/: db_logger_gui.html  main.html  make_db_entry.html
_sources/api/: modules.rst.txt  nexuslims_logger.rst.txt
api/: modules.html  nexuslims_logger.html
docs/: admin_doc.rst  conf.py  index.rst  logger_gui.rst
src/nexuslims_logger/: __init__.py  config.json  db_logger_gui.py  main.py  make_db_entry.py  skeleton.py
tests/: conftest.py  test_skeleton.py
